--- a/.cpanel.yml
+++ b/.cpanel.yml
@@ -3,9 +3,9 @@ deployment:
   tasks:
     - export DEPLOYPATH=/home/kina3126/public_html/backup.kanpa.co.id/
     - /bin/cp -R application $DEPLOYPATH
-    - /bin/cp -R assets $DEPLOYPATH
-    - /bin/cp -R system $DEPLOYPATH
-    - /bin/cp -R vendor $DEPLOYPATH
-    - /bin/cp .htaccess $DEPLOYPATH
-    - /bin/cp comproser.json $DEPLOYPATH
-    - /bin/cp index.php $DEPLOYPATH
+    # - /bin/cp -R assets $DEPLOYPATH
+    # - /bin/cp -R system $DEPLOYPATH
+    # - /bin/cp -R vendor $DEPLOYPATH
+    # - /bin/cp .htaccess $DEPLOYPATH
+    # - /bin/cp comproser.json $DEPLOYPATH
+    # - /bin/cp index.php $DEPLOYPATH
