--- a/.gitignore
+++ b/.gitignore
@@ -18,6 +18,16 @@ user_guide_src/cilexer/dist/*
 user_guide_src/cilexer/pycilexer.egg-info/*
 /upload/
 /vr/
+# /assets/
+# /vendor/
+# /.htaccess/
+# /composer.json/
+# /composer.lock/
+# /index.php/
+# /ror.xml/
+# /sitemap.html/
+# /sitemap.xml/
+# /utllist.txt/
 
 # IDE Files
 #-------------------------
