--- a/.cpanel.yml
+++ b/.cpanel.yml
@@ -5,6 +5,6 @@ deployment:
     - /bin/cp -R application $DEPLOYPATH
     - /bin/cp -R assets $DEPLOYPATH
     - /bin/cp -R system $DEPLOYPATH
-    - /bin/cp .htaccess $DEPLOYPATH
+    # - /bin/cp .htaccess $DEPLOYPATH
     - /bin/cp .cpanel.yml $DEPLOYPATH
     - /bin/cp index.php $DEPLOYPATH
