--- a/.cpanel.yml
+++ b/.cpanel.yml
@@ -9,4 +9,4 @@ deployment:
     - /bin/cp .cpanel.yml $DEPLOYPATH
     - /bin/cp .gitignore $DEPLOYPATH
     # - /bin/cp comproser.json $DEPLOYPATH
-    # - /bin/cp index.php $DEPLOYPATH
+    - /bin/cp index.php $DEPLOYPATH
