--- a/.cpanel.yml
+++ b/.cpanel.yml
@@ -1,3 +1,4 @@
+---
 deployment:
   tasks:
     - export DEPLOYPATH=/home/kina3126/public_html/kanpa.co.id/
@@ -8,5 +9,6 @@ deployment:
     - /bin/cp .htaccess $DEPLOYPATH
     - /bin/cp .cpanel.yml $DEPLOYPATH
     - /bin/cp .gitignore $DEPLOYPATH
-    # - /bin/cp comproser.json $DEPLOYPATH
+    # - /bin/cp composer.json $DEPLOYPATH
     - /bin/cp index.php $DEPLOYPATH
+    - cd $DEPLOYPATH && /usr/local/bin/composer install --no-dev --optimize-autoloader
